# ai-music-composer

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: llm_cli_demo.md
src/: __init__.py  composer_cli.py  config.py  llm_cli.py  logging_config.py
src/composer/: __init__.py  generator.py  instrument.py  instrument_adapters.py  instrument_manager.py  midi_controller.py  sequencer.py  transport.py
src/database/: init_music_db.py  models.py
src/llm_composer/: README.md  __init__.py  composer.py  context.py  memory.py  memory_design.md  midi_tools.py  models.py
src/midi_generator/: __init__.py  generator.py  instrument.py  instrument_adapters.py  instrument_manager.py  midi_controller.py  sequencer.py  structures.py  transport.py
tests/: __init__.py  test_generator.py  test_instrument.py  test_instrument_manager.py  test_prompt_augmenter.py
